class Observer:
    def update(self, event):
        pass